VQ-777: Modifying n linking the component to analyics subheader

--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -308,7 +308,7 @@
               >
             </li>
             <li class="nav-item" style="font-size: 15px">
-              <a class="nav-link" routerLink="./reports"
+              <a class="nav-link" routerLink="./reportsv2"
                 ><i class="fa-solid fa-chart-pie" style="padding-right: 6px"></i
                 >{{ "lang.analytics" | translate | uppercase }}</a
               >
