--- a/src/app/features/reports-v2/reports/reports.component.css
+++ b/src/app/features/reports-v2/reports/reports.component.css
@@ -19,12 +19,11 @@
 }
 
 .btn-tab {
-    border-radius: 50px;
+    border-radius: 5px;
     margin-right: 10px;
-    border: 2px solid #000;
+    border: 2px solid #00000033;
     background-color: #fff;
     color: black;
-    /* border: 1px solid #00000033; */
 }
 
 .btn-tab.active {
