VQ-742: Cover Type Comparison Screen

--- a/src/app/features/gis/components/quotation/components/quick-quote-details/quick-quote-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-details/quick-quote-details.component.html
@@ -1,7 +1,8 @@
 <div class="container ">
     <p class="title mt-3">Quotations: Quotation Data Entry</p>
      <app-stepper [currentStep]="1" [stepperData]="steps"></app-stepper>
-     <div class="container mx-2 mt-n1">     <app-quick-quote-form></app-quick-quote-form>
+     <div class="container mx-2 mt-n1">     
+        <app-quick-quote-form></app-quick-quote-form>
      </div>
 </div>
 
