--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -106,7 +106,7 @@
                                     <div class="col-xl-4">ID</div>
                                     <div class="col-xl-4">Name</div>
                                 </div>
-                                <div *ngFor="let data of clientList.content" class="mb-3">
+                                <div *ngFor="let data of clientData" class="mb-3">
                                     <div class="row">
                                     <div class="col-xl-4">
                                         <input class="form-check-input me-2 mt-2" (click)="loadClientDetails(data.id)" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
