--- a/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
+++ b/src/app/features/reports-v2/create-dashboard/create-dashboard.component.html
@@ -2,16 +2,16 @@
   <div class="card">
     <div class="card-body">
       <div class="row col-sm-12">
-        <div class="text-center col-sm-4"></div>
-        <div class="text-center col-sm-4">
+        <div class="text-center col-sm-4 mt-5"></div>
+        <div class="text-center col-sm-4 mt-5">
           <input type="search" class="form-control" placeholder="Search">
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 mt-5">
           <button class="btn btn-outline-primary float-end createDashBtn"
                   data-bs-toggle="modal" data-bs-target="#createDashboardModal">Create Dashboard</button>
         </div>
         <div class="col-sm-4 mt-3">
-          <div class="card">
+          <div class="card" draggable="true">
             <div class="card-header border-0 text-sm-start bg-transparent"
             style="color: rgba(0, 0, 0, 0.60); font-weight: 600;">
               Financial reports
