--- a/src/app/features/reports-v2/create-dashboard/create-dashboard.component.css
+++ b/src/app/features/reports-v2/create-dashboard/create-dashboard.component.css
@@ -20,7 +20,27 @@
 :host ::ng-deep .p-element .p-submenu-header {
   display:none;
 }
-.res {
-  resize:both;
-  overflow:auto;
+.icon-container {
+  position: relative;
+  cursor: pointer;
+}
+
+.icon-container .fa::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 24px;
+  height: 24px;
+  border: 2px solid #b2b9c070;
+  border-radius: 50%;
+  background-color: #b2b9c070;
+  display: none;
+}
+.icon-container.active .fa::after {
+  display: block; /* Display the circle when the container has the "active" class */
+}
+.move {
+  cursor: move;
 }
