VQ-635: UI enhancement - filters

--- a/src/app/features/reports/create-report/create-report.component.html
+++ b/src/app/features/reports/create-report/create-report.component.html
@@ -110,17 +110,26 @@
             </div>
           </div>
 
-          <ng-container *ngIf="isCriteriaButtonActive">
+          <!--<ng-container *ngIf="isCriteriaButtonActive">
             <div class="row" style="padding: 0 2rem 2rem 1rem">
               <ng-container *ngFor="let criteriaItem of criteria">
-                <div class="col-sm-3 fadeInDown" >
+                <div class="col-sm-4 fadeInDown" >
                   <app-criteria-pill
                     [queryObject]="criteriaItem"
                     (deleteCriteriaDetails)="deleteCriteria($event)"
+                    (filter)="updateFilter($event)"
                   ></app-criteria-pill>
                 </div>
               </ng-container>
             </div>
+          </ng-container>-->
+
+          <ng-container *ngIf="isCriteriaButtonActive">
+            <app-criteria
+              (deleteCriteriaDetails)="deleteCriteria($event)"
+              (filter)="updateFilter($event)"
+              [criteria]="criteria"
+            ></app-criteria>
           </ng-container>
 
           <ng-container *ngIf="!isCriteriaButtonActive">
