--- a/src/app/features/reports/create-report/create-report.component.css
+++ b/src/app/features/reports/create-report/create-report.component.css
@@ -10,7 +10,7 @@
 
 .right .card, .left .card {
   min-height: 65vh;
-  border-radius: 0;
+  /*border-radius: 0;*/
 }
 
 .right .card .card-body {
@@ -26,14 +26,14 @@
   border: solid 1px #343A4080;
   color: grey;
   margin: 0 5px;
-  border-radius: 0;
+  /*border-radius: 0;*/
 }
 
 .active-btn {
   background: #00529b;
   color: #fff;
   margin: 0 5px;
-  border-radius: 0;
+  /*border-radius: 0;*/
 }
 
 .preview-nav {
@@ -126,7 +126,7 @@
 }
 :host ::ng-deep .p-dropdown {
   width: 100%;
-  border-radius: 0px;
+  /*border-radius: 0px;*/
   height: 40px;
   font-size: 1rem;
 }
@@ -175,4 +175,8 @@
 .query::selection {
   background-color: white;
   color: black;
+}
+
+:host ::ng-deep .pill-box .pi {
+  margin-right: 10px;
 }
